@@ -3,7 +3,7 @@
 //
 // internals.h: tidying some parts of Rinternals.h
 
-// Copyright (C) 2020 - 2023  Dirk Eddelbuettel
+// Copyright (C) 2020 - 2025  Dirk Eddelbuettel
 //
 // This file is part of tidyCpp
 //
@@ -36,14 +36,14 @@ namespace R {                   // we remain all tidied up in a namespace
     // the following is from the 'internal use only' section
     inline SEXP Attrib(SEXP x)               { return (ATTRIB(x));           }
     inline unsigned int Object(SEXP x)       { return (OBJECT(x));           }
-    inline unsigned int Mark(SEXP x)         { return (MARK(x));             }
+    //inline unsigned int Mark(SEXP x)         { return (MARK(x));             }
     inline unsigned int Typeof(SEXP x)       { return (TYPEOF(x));           }
     inline unsigned int Named(SEXP x)        { return (NAMED(x));            }
-    inline unsigned int Rtrace(SEXP x)       { return (RTRACE(x));           }
+    //inline unsigned int Rtrace(SEXP x)       { return (RTRACE(x));           }
     inline unsigned int Levels(SEXP x)       { return (LEVELS(x));           }
     inline void setObject(SEXP x, unsigned int v)     { SET_OBJECT(x, v);    }
     inline void setTypeof(SEXP x, unsigned int v)     { SET_TYPEOF(x, v);    }
-    inline void setRtrace(SEXP x, unsigned int v)     { SET_RTRACE(x, v);    }
+    //inline void setRtrace(SEXP x, unsigned int v)     { SET_RTRACE(x, v);    }
     inline void setLevels(SEXP x, unsigned int v)     { SETLEVELS(x, v);     }
     inline unsigned int Altrep(SEXP x)       { return (ALTREP(x));           }
     //inline void setAltrep(SEXP x, unsigned int v)     { SETALTREP(x, v);     }
@@ -65,9 +65,9 @@ namespace R {                   // we remain all tidied up in a namespace
 #endif
 
     inline bool maybeShared(SEXP x)     { return(MAYBE_SHARED(x));  }
-    inline bool noReferences(SEXP x)    { return(REFCNT(x) == 0);   }
-    inline bool maybeReferenced(SEXP x) { return(!noReferences(x)); }
     inline bool notShared(SEXP x)       { return(!maybeShared(x));  }
+    //inline bool noReferences(SEXP x)    { return(REFCNT(x) == 0);   }
+    //inline bool maybeReferenced(SEXP x) { return(!noReferences(x)); }
 
     inline int length(SEXP x)           { return(LENGTH(x));        }
     inline R_xlen_t xlength(SEXP x)     { return(XLENGTH(x));       }
