@@ -1,3 +1,8 @@
+2025-11-24  Dirk Eddelbuettel  <edd@debian.org>
+
+	* inst/include/tidy/internals.h: Comment-out five no longer
+	accessible access points
+
 2025-10-13  Dirk Eddelbuettel  <edd@debian.org>
 
 	* .github/workflows/ci.yaml: Use r-ci with embedded bootstrap
